--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,13 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".service.MessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
         <service android:name=".framework.ui.MainService" />
         <service android:name=".framework.ui.DetailsService" />
 
